--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -38,7 +38,7 @@ jobs:
         run: |
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
-          echo ${{ secrets.GITHUB_TOKEN }} | gh auth login --with-token
+          echo ${{ secrets.git tag }} | gh auth login --with-token
       - run: gem install parse_gemspec-cli
         name: Intall gem parser
       - run: echo "::set-output name=tag::$(parse-gemspec-cli *.gemspec | jq .'version')"
