--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -23,6 +23,23 @@ jobs:
           bundler-cache: true
       - name: Run Rubocop
         run: bundle exec rubocop -P
+  tests:
+    name: Lint code
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    steps:
+      - uses: rokroskar/workflow-run-cleanup-action@v0.3.0
+        if: "github.ref != 'refs/heads/develop'"
+        env:
+          GITHUB_TOKEN: "${{ secrets.GITHUB_TOKEN }}"
+      - uses: actions/checkout@v2.0.0
+        with:
+          fetch-depth: 1
+      - uses: ruby/setup-ruby@v1
+        with:
+          bundler-cache: true
+      - name: Run Specs
+        run: bundle exec rspec
   release:
     if: "github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'"
     needs: [lint]
