--- a/.github/workflows/ci_cd.yml
+++ b/.github/workflows/ci_cd.yml
@@ -40,9 +40,11 @@ jobs:
           bundler-cache: true
       - name: Run Specs
         run: bundle exec rspec
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v3
   release:
     if: "github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'"
-    needs: [lint]
+    needs: [lint, tests]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2.0.0
